Fix sub-title format

--- a/company_search.ipynb
+++ b/company_search.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5e8e2bb4",
+   "id": "962275ff",
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e767e8b",
+   "id": "904c532c",
    "metadata": {},
    "source": [
     "## Imports"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e064431c",
+   "id": "5564add1",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82088491",
+   "id": "8bfcd3e3",
    "metadata": {},
    "source": [
     "## 1. EDA"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49f2b26a",
+   "id": "dddc8dd1",
    "metadata": {},
    "source": [
     "### b. Explore and clean data"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3ff61340",
+   "id": "6d41ea69",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cfbe118e",
+   "id": "6513025f",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5f44145f",
+   "id": "7306a710",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b37b9fa0",
+   "id": "0d60a390",
    "metadata": {},
    "source": [
     "* The `Hôtel de ville Lille` adress seems to come up quite a lot. I could not find the adresses online and it seems to be a data quality issue. (To be investigated)."
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5c67bff2",
+   "id": "2ab77cde",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "649f9117",
+   "id": "b3f712d5",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3a4fb345",
+   "id": "84841cae",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0532eb0",
+   "id": "d4c1c6c5",
    "metadata": {},
    "source": [
     "* This one row has all the three missing values for **'categorieJuridiqueUniteLegal'**, **'denominationUniteLegale'** and **'activitePrincipaleEtablissement'**. And we could not find a row which contains data relating to the same company."
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "864673c6",
+   "id": "f6959351",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "77199375",
+   "id": "cf6091f2",
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "614b5347",
+   "id": "d57c6892",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6a8cf0d2",
+   "id": "74ef83f4",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb6f1ad3",
+   "id": "154feb18",
    "metadata": {},
    "source": [
     "* `La poste` seems to be a winner!"
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "42186b66",
+   "id": "00b497d3",
    "metadata": {},
    "outputs": [
     {
@@ -1095,16 +1095,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e736d98",
+   "id": "c9aa8550",
    "metadata": {},
    "source": [
-    "* ###### Elasticsearch does not like missing data, and the `null_value` parameter cannot be used with a `text` field. Consequently, the missing data has to be delt with before ingestion. We chose to replace the missing data with a `Non renseigné` string."
+    "###### Elasticsearch does not like missing data, and the `null_value` parameter cannot be used with a `text` field. Consequently, the missing data has to be delt with before ingestion. We chose to replace the missing data with a `Non renseigné` string."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b8412d08",
+   "id": "fee18a7c",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8aa1a5a6",
+   "id": "50c116c4",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "209fb275",
+   "id": "c15d422e",
    "metadata": {},
    "outputs": [
     {
@@ -1191,15 +1191,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a3c026",
+   "id": "31964e24",
    "metadata": {},
    "source": [
-    "* ##### There are no duplicates!"
+    "##### There are no duplicates!"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17db89fd",
+   "id": "fdf62f2f",
    "metadata": {},
    "source": [
     "### c. Split data"
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5e26441",
+   "id": "a37ace58",
    "metadata": {},
    "source": [
     "* We can filter on the `dep` directly when ingesting data. But we prefer to keep the dataframes in memory for possible use later on."
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fc121845",
+   "id": "3f72803a",
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e1754661",
+   "id": "511bb925",
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1b44f97",
+   "id": "2913279a",
    "metadata": {},
    "source": [
     "## 2. Elasticsearch"
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f093302d",
+   "id": "569c30b1",
    "metadata": {},
    "source": [
     "Warning: If not using a jupyter docker container, substitue `host.docker.internal`with `localhost`in all URLs."
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9cc890",
+   "id": "81e03993",
    "metadata": {},
    "source": [
     "### a. Check Elasticsearch"
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6953214b",
+   "id": "95b89a7d",
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b228304d",
+   "id": "f66b93ed",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dfafe77",
+   "id": "e253a6e9",
    "metadata": {},
    "source": [
     "Yay! it works :)"
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a364aa96",
+   "id": "b51dbbed",
    "metadata": {},
    "source": [
     "### b. Instantiate a client instance"
@@ -1365,7 +1365,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6c25746b",
+   "id": "cb744057",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f779b8ed",
+   "id": "c79e86e8",
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48b9fcb0",
+   "id": "f7ce8d78",
    "metadata": {},
    "source": [
     "### c. Ingest data"
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fadcec35",
+   "id": "4b3fb275",
    "metadata": {},
    "source": [
     "#### i. Create indices"
@@ -1440,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b5733d9c",
+   "id": "b603f497",
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3a19cb28",
+   "id": "6314b9da",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60be31d4",
+   "id": "18734848",
    "metadata": {},
    "source": [
     "* We chose static mapping instead of dynamic mapping to have absolute control over the fields."
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff82ab6",
+   "id": "f2204450",
    "metadata": {},
    "source": [
     "Mapping schema:\n",
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "05f07357",
+   "id": "b5a8b738",
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "01f6127c",
+   "id": "4f3ad7e1",
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1e017834",
+   "id": "85ecd0a6",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "935cbd03",
+   "id": "72857d7b",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2cbaad1",
+   "id": "79644fd0",
    "metadata": {},
    "source": [
     "#### ii. Ingest dataframes into indices"
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "680defb5",
+   "id": "47886cd4",
    "metadata": {},
    "source": [
     "* We do so using [`helpers.bulk`](https://elasticsearch-py.readthedocs.io/en/7.9.1/helpers.html) which requires a generator, which means indexing the dataset without putting it into memory, which in turn saves resources.\n",
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4e88ed22",
+   "id": "524cadb1",
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e4dc02fe",
+   "id": "b64deabf",
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e29c94d1",
+   "id": "bae66d43",
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1762,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b7a4dbbd",
+   "id": "79e9b4c3",
    "metadata": {},
    "outputs": [
     {
@@ -1800,7 +1800,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "00cfee2b",
+   "id": "78a877ff",
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5b2d71ea",
+   "id": "e0927e73",
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "1e18b253",
+   "id": "206f9e8f",
    "metadata": {},
    "outputs": [
     {
@@ -1899,7 +1899,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c9b6eeb3",
+   "id": "9a656ed3",
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1917,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "29fc1945",
+   "id": "62c9d4d4",
    "metadata": {},
    "outputs": [
     {
@@ -1955,7 +1955,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d7a68447",
+   "id": "bb53688f",
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d07d7795",
+   "id": "31f8e37e",
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7093b82b",
+   "id": "504f5910",
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9449dc9e",
+   "id": "11ac8e65",
    "metadata": {},
    "source": [
     "### d. Search queries"
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b0bd14d",
+   "id": "9d0a9cdd",
    "metadata": {},
    "source": [
     "* There are two ways we could go about this; either using the low-level API or the expressive DSL API. For the first question we will test both. As for the remaining questions, we will use the high level DSl library as it is more Pythonic and less verbose."
@@ -2067,7 +2067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03558abf",
+   "id": "c2a57421",
    "metadata": {},
    "source": [
     "#### Question 1: All companies in Department 23 where denominationUniteLegale contains word : `boulanger`"
@@ -2075,7 +2075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d6e5e86",
+   "id": "1b3fd0be",
    "metadata": {},
    "source": [
     "#### i. Using the low level API"
@@ -2084,7 +2084,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "571f1fdc",
+   "id": "914a2484",
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2109,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d9645114",
+   "id": "96d5f607",
    "metadata": {},
    "outputs": [
     {
@@ -2138,7 +2138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316be6ee",
+   "id": "0c074f52",
    "metadata": {},
    "source": [
     "* The response is a `dict`"
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "747fdf9a",
+   "id": "8aa4485c",
    "metadata": {},
    "outputs": [
     {
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "40fb898b",
+   "id": "47b81885",
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e8eb28d",
+   "id": "c7d9cd03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2215,7 +2215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06a0181",
+   "id": "4ace505d",
    "metadata": {},
    "source": [
     "#### ii. Using Elasticsearch DSL library"
@@ -2224,7 +2224,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f87cc8ac",
+   "id": "5ae9a25c",
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2244,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "79c20764",
+   "id": "f0c4d6b8",
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2265,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4f89507c",
+   "id": "abb4cf35",
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9dd3a7",
+   "id": "12641171",
    "metadata": {},
    "source": [
     "* The reponse is a `reponse object`"
@@ -2301,7 +2301,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "1ddd9136",
+   "id": "7d2b6680",
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08290ca0",
+   "id": "70b3f101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2352,7 +2352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb12d53",
+   "id": "9faa0884",
    "metadata": {},
    "source": [
     "#### iii. Test with Pandas to make sure the search results are correct"
@@ -2361,7 +2361,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d358908e",
+   "id": "cd2afff5",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ceeb15b",
+   "id": "d75ca161",
    "metadata": {},
    "source": [
     "* The results seem to match!"
@@ -2396,7 +2396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea6896e9",
+   "id": "384941d1",
    "metadata": {},
    "source": [
     "#### Question 2: All companies in Department 48 where activitePrincipaleEtablissement is 90.01Z"
@@ -2405,7 +2405,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "12d30eba",
+   "id": "b47221b3",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f8b12a78",
+   "id": "3ffe490e",
    "metadata": {},
    "outputs": [
     {
@@ -2447,7 +2447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3467cfdd",
+   "id": "ed5ab1cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd0e24e3",
+   "id": "300eb22a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2468,7 +2468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "301506fa",
+   "id": "14f078f7",
    "metadata": {},
    "source": [
     "#### Question 3: All companies in Department 23 where codeCommuneEtablissement is 23079 or 23176"
@@ -2477,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "254a69be",
+   "id": "df6ccb51",
    "metadata": {},
    "outputs": [
     {
@@ -2497,7 +2497,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "966deed0",
+   "id": "58245e9e",
    "metadata": {},
    "outputs": [
     {
@@ -2518,7 +2518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c6a804a",
+   "id": "3c54e533",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2529,7 +2529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a36f63a5",
+   "id": "52d2289b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2538,7 +2538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa84cbc",
+   "id": "eac3bbb8",
    "metadata": {},
    "source": [
     "#### Question 4: Relevant companies in Departement 48 where terms of query is Théâtre Mende (NB : Mende is the city capital of Department 48)"
@@ -2547,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "7b8301a4",
+   "id": "e4bc5a8e",
    "metadata": {},
    "outputs": [
     {
@@ -2567,7 +2567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce66131c",
+   "id": "70ac1918",
    "metadata": {},
    "source": [
     "* 20 most relevant results based on the Term Frequency/Inverse Document Frequency (TF/IDF) model\n",
@@ -2577,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "65ebaf6a",
+   "id": "05d1c925",
    "metadata": {},
    "outputs": [
     {
@@ -2598,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e003c3f7",
+   "id": "6ca2c7ef",
    "metadata": {
     "scrolled": true
    },
@@ -2644,7 +2644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6173cf03",
+   "id": "1acca989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2654,7 +2654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5713918f",
+   "id": "2da3c5af",
    "metadata": {},
    "source": [
     "And voilà!"
