Improve comment phrasing

--- a/company_search.ipynb
+++ b/company_search.ipynb
@@ -1282,7 +1282,7 @@
    "id": "92cb0d80",
    "metadata": {},
    "source": [
-    "Warning: If not using a jupyter docker container, substitue `host.docker.internal`with `localhost`in all URLs."
+    "Warning: If a Jupyter docker container is not used, substitute `host.docker.internal` for `localhost`in all URLs."
    ]
   },
   {
